--- a/src/main/java/com/rizki/mufrizal/aplikasi/inventory/view/BarangView.form
+++ b/src/main/java/com/rizki/mufrizal/aplikasi/inventory/view/BarangView.form
@@ -26,10 +26,6 @@
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="269" max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -60,14 +56,19 @@
               </Group>
               <EmptySpace pref="19" max="32767" attributes="0"/>
           </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="279" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <Component id="idBarang" min="-2" pref="21" max="-2" attributes="0"/>
@@ -312,13 +313,15 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <Group type="103" groupAlignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="first" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="previous" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="next" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="last" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="perPage" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="labelPaging" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="next" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="last" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="perPage" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="labelPaging" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
